# SciArticle_Fast_Api-

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: config.py  database.py  main.py
migrations/: env.py
users/: models.py
